# darkrun

./: .firebaserc  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  NOTICE  README.md  codecov.yml  firebase.json  firestore.indexes.json  firestore.rules  release-please-config.json  tarpaulin.toml
.cargo/: config.toml
.claude/: settings.json
.claude-plugin/: marketplace.json
.darkrun/darkrun-sim/: action-log.jsonl  deadlock.json  events.jsonl  run.md  state.json
.darkrun/knowledge/: deadlock-escalate-is-stranded-verdict.md  existing-darkrun-sim-crate-is-a-prompt-linter.md  fixture-determinism-traps.md  sim-prompt-surface-contract.md  site-replay-substrate.md  subagent-dispatch-is-prose.md  wasm-boundary-for-fixture-types.md
.github/: dependabot.yml  secret_scanning.yml
.github/workflows/: ci-image.yml  ci.yml  codeql.yml  coverage.yml  deploy-app.yml  deploy-web.yml  ios-release.yml  ios-testflight.yml  macos-appstore.yml  release-please.yml  release.yml  rust-quality.yml  terraform.yml
crates/darkrun-api/: Cargo.toml  openapi.json
crates/darkrun-api/src/: advance.rs  common.rs  direction.rs  feedback.rs  lib.rs  notify.rs  openapi.rs  output_review.rs  proof.rs  push.rs  question.rs  review.rs  review_current.rs  routes.rs  runs.rs  session.rs  tunnel.rs
crates/darkrun-api/tests/: payloads.rs  schema_routes.rs
crates/darkrun-browse/: Cargo.toml
crates/darkrun-browse/src/: feedback.rs  feedback_doc.rs  lib.rs  proof.rs  runs.rs
crates/darkrun-cli/: Cargo.toml
crates/darkrun-content/: Cargo.toml
crates/darkrun-core/: Cargo.toml
crates/darkrun-git/: Cargo.toml
crates/darkrun-git/src/: authorship.rs  backend.rs  clone.rs  error.rs  gix_backend.rs  lib.rs  libgit2.rs  merge.rs  net.rs  push.rs  shell.rs
crates/darkrun-git/tests/: remote_status.rs  worktree.rs
crates/darkrun-http/: Cargo.toml
crates/darkrun-mcp/: Cargo.toml
crates/darkrun-sim/: Cargo.toml  README.md
crates/darkrun-sim/fixtures/: dark-core.json
crates/darkrun-sim/src/: agent.rs  harness.rs  lib.rs  provider.rs  scenarios.rs  tool_registry.rs  transcript.rs  world.rs
crates/darkrun-sim/tests/: followability.rs
crates/darkrun-tunnel/: Cargo.toml
crates/darkrun-tunnel/src/: lib.rs
crates/darkrun-tunnel/tests/: bridge.rs
crates/darkrun-ui/: Cargo.toml
crates/darkrun-ui/examples/: dag_mockup.rs  theme_snapshot.rs
crates/darkrun-ui/src/: flow.rs  kinds.rs  lib.rs  markdown.rs  selection.rs  tokens.rs  view.rs
crates/darkrun-ui/src/components/: annotate.rs  chips.rs  factory.rs  feedback.rs  mod.rs  output_review.rs  phase_machine.rs  pipeline.rs  primitives.rs  proof_panel.rs  role.rs  run_list.rs  session_views.rs  sidebar.rs  station_flow.rs  station_strip.rs  tab_bar.rs  view_artifacts.rs  walkthrough.rs  wordmark.rs
crates/darkrun-ui/src/graph/: layout.rs  mod.rs  view.rs
crates/darkrun-ui/tests/: flow.rs  logic.rs  ssr_render.rs  view.rs
crates/darkrun-vcs/: Cargo.toml
crates/darkrun-vcs/src/: detect.rs  error.rs  lib.rs  native.rs  oauth.rs  provider.rs  remote.rs  repos.rs  rest.rs  store.rs  transport.rs
crates/darkrun-vcs/tests/: oauth.rs  provider.rs  remote.rs  rest.rs  store.rs
crates/darkrun-verify/: Cargo.toml
desktop/: Cargo.toml  Dioxus.toml
desktop/src/: home.rs  lib.rs  main.rs  map.rs  review.rs  signin.rs  wire.rs
desktop/tests/: map_mappings.rs  map_unit_view.rs  wire_config.rs  wire_feed.rs  wire_payloads.rs  wire_status.rs  wire_view_proof.rs
fastlane/: .gitignore  Appfile  Fastfile  Framefile.json  Gemfile  README.md  bootstrap-ios-signing.sh  bootstrap-macos-signing.sh  darkrun-mac.entitlements  package-ios-ipa.sh  package-macos-pkg.sh
fastlane/screenshots/: .gitignore
firestore/: SCHEMA.md
infra/: .terraform.lock.hcl  README.md  bootstrap-tfc.sh  bootstrap.sh  main.tf  outputs.tf  providers.tf  set-fcm-env.sh  terraform.tfvars.example  variables.tf  versions.tf
infra/modules/auth/: main.tf  (+2 more)
mockups/: artifact-comparison.html  darkrun-design.html  engine-gaps-comparison.html  engine-parity-gaps.csv  engine-parity-gaps.md  engine-spec.md  factory-orientation-plan.md  predecessor-bug-audit.md  review-app-v2.html
npm/: README.md
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
npm/win32-x64/: package.json
plugin/: .mcp.json  AGENTS.md  GEMINI.md  README.md  gemini-extension.json  opencode.json  package.json
plugin/.claude-plugin/: plugin.json
plugin/.cursor-plugin/: plugin.json
plugin/commands/: darkrun-autopilot.md  darkrun-autopilot.toml  darkrun-backlog.md  darkrun-backlog.toml  darkrun-changelog.toml  darkrun-checkpoint.md  darkrun-checkpoint.toml  darkrun-dark.md  darkrun-dark.toml  darkrun-debug.toml  darkrun-factories.md  darkrun-factories.toml  darkrun-gate-review.toml  darkrun-inspect.md  darkrun-inspect.toml  darkrun-login.md  darkrun-login.toml  darkrun-migrate.toml  darkrun-new.md  darkrun-new.toml  darkrun-pickup.md  darkrun-pickup.toml  darkrun-quick.md  darkrun-quick.toml  darkrun-report.toml  darkrun-reset.toml  darkrun-resume.md  darkrun-resume.toml  darkrun-scaffold.toml  darkrun-setup.md  darkrun-setup.toml  darkrun-show.md  darkrun-show.toml  darkrun-start.toml  darkrun-statusline.toml  darkrun-version.toml  darkrun-zap.toml
plugin/harnesses/: README.md
scripts/: coverage.sh  set-version.sh
web/app/: Cargo.toml  Dioxus.toml  firebase-messaging-sw.js  index.html
web/app/js/: firebase-login.js  firebase-messaging.js
web/app/src/: banner.rs  dashboard.rs  firebase.rs  lib.rs  login.rs  main.rs  register.rs  remote.rs  runs.rs  workspace.rs
web/server/: Cargo.toml
web/server/src/: broker.rs  config.rs  firebase_auth.rs  firestore.rs  gcp_auth.rs  github_app.rs  lib.rs  oauth_routes.rs  push.rs  ratelimit.rs  relay.rs  relay_broker.rs  relay_bus.rs  relay_registry.rs  repos.rs  sessions.rs  state.rs  tests.rs  transport.rs  workspace.rs
web/site/: .gitignore  Cargo.toml  Dioxus.toml  index.html  og-card.html
web/well-known/: README.md  apple-app-site-association  assetlinks.json
(+371 files in other folders)
