[package]
name = "darkrun-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "darkrun cross-platform desktop review app (Dioxus): connects to the local engine over WebSocket and renders the Review session screen"
publish = false

[[bin]]
name = "darkrun-desktop"
path = "src/main.rs"

[dependencies]
darkrun-telemetry.workspace = true
# Wire contract — the session/review payload types rendered by the UI.
darkrun-api = { workspace = true }

# Shared design system — tokens + components rendered by the review screens.
darkrun-ui = { workspace = true }

# Harness registry — per-harness display names + autonomous launch flags, used to
# render the no-engine ONE-STEP start command (cd <project> && <harness> <flag>).
darkrun-harness = { workspace = true }

# Engine discovery — reads the `~/.darkrun/<slug>/engine-<pid>.json` registry to
# find live engines and the loopback port each serves on, so the desktop can
# auto-connect without a fixed port / env handshake. Also the project registry
# (list/register projects, persisted as `~/.darkrun/<slug>/project.json`).
darkrun-mcp = { workspace = true }

# Domain types — the `ProjectRecord` the registry persists and the desktop reads.
darkrun-core = { workspace = true }

# Clone & register — the desktop clones a Git URL into ~/darkrun/<name> directly
# (in-process via gitoxide, no `git` CLI shell-out) and validates local repos
# before registering them.
darkrun-git = { workspace = true }

# Home-directory resolution for the default clone root (~/darkrun).
dirs = { workspace = true }

# UI: Dioxus + the desktop (WebView) renderer, behind the `desktop` feature.
dioxus = { version = "0.7", features = ["desktop"] }

# Live session feed: an async WebSocket client to ws://127.0.0.1:PORT/ws/session/:id.
# tokio is already the workspace async runtime; tungstenite is its companion WS impl.
tokio = { workspace = true }
tokio-tungstenite = "0.30"
futures-util = "0.3"

# (De)serialization of the wire payloads.
serde = { workspace = true }
serde_json = { workspace = true }

# Parse incoming deep links (`https://app.darkrun.ai/review/<id>` Universal Links
# and `darkrun://review/<id>` custom-scheme URLs) into a review/session id.
url = { workspace = true }

# iOS: reach the live WKWebView (via wry's WebViewExtIOS) to force MOBILE content
# mode, so the layout viewport tracks the window width instead of WKWebView's
# default ~980px desktop viewport (which ignores width=device-width and clips the
# UI). Versions match wry's own objc2 graph so the WKWebView types unify.
# Native file picker for the "Local repo" flow — the macOS Finder open panel (and
# the GTK dialog on Linux, which the workspace already links for the webview).
# Excluded on iOS, which has no folder picker; the Browse button is compiled out
# there. default-features = false drops the xdg-portal backend (ashpd → wayland →
# quick-xml, which carries open RustSec advisories with no upgrade path while
# wayland-scanner pins quick-xml 0.39); the macOS backend is unconditional.
[target.'cfg(not(target_os = "ios"))'.dependencies]
rfd = { version = "0.15", default-features = false, features = ["gtk3"] }

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.6"
objc2-web-kit = { version = "0.3", features = [
    "WKWebView",
    "WKWebViewConfiguration",
    "WKWebpagePreferences",
    "WKNavigation",
] }

[dev-dependencies]
dioxus-ssr = "0.7"
# Mock the `~/.darkrun` discovery tree in unit tests for engine discovery.
tempfile = "3"
