[package]
name = "darkrun-git"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "darkrun git worktree management — libgit2-backed with a shell-out fallback"

[dependencies]
git2 = { version = "0.20", default-features = false }
# Pure-Rust git (gitoxide), C-free end to end: default features avoid the
# zlib-ng/`max-performance` C path; `merge` is the three-way tree/blob merge;
# the network transport uses reqwest + rustls (pure Rust, no curl/openssl C).
gix = { version = "0.84", features = [
    "merge",
    "blocking-network-client",
    "blocking-http-transport-reqwest-rust-tls",
] }
thiserror.workspace = true
wait-timeout.workspace = true

[dev-dependencies]
tempfile = "3"
