[package]
name = "darkrun-git"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "darkrun git worktree management — pure-Rust gitoxide backend (no C, no git CLI)"

[dependencies]
# Pure-Rust git (gitoxide), C-free end to end: default features avoid the
# zlib-ng/`max-performance` C path; `merge` is the three-way tree/blob merge;
# the network transport uses reqwest + rustls (pure Rust, no curl/openssl C).
gix = { version = "0.85", features = [
    "merge",
    "blocking-network-client",
    "blocking-http-transport-reqwest-rust-tls",
] }
# gitoxide ships no high-level `git push`, so we build send-pack ourselves over
# its transport. `generate` turns on gix-pack's packfile *writer* (the `output`
# module) — Cargo unifies this into the gix-pack instance gix already uses, so
# `gix::odb::pack::data::output` lights up. Pure Rust (gix-traverse/-diff).
gix-pack = { version = "0.72", default-features = false, features = ["generate"] }
# The gate review renders `git diff` itself (gitoxide has no diff porcelain).
# `unified_diff` turns on imara-diff's Display-based unified renderer — Cargo
# unifies it into the gix-imara-diff instance gix already uses. Pure Rust.
gix-imara-diff = { version = "0.2.2", default-features = false, features = ["unified_diff"] }
# The OAuth credential store (`~/.darkrun/credentials`, written by
# `darkrun auth login`) is the source of HTTPS push/fetch tokens — bridged into
# the send-pack/fetch credential paths so both authenticate with the stored
# provider token rather than an environment variable nothing exports.
darkrun-vcs.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
