[package]
name = "darkrun-vcs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "darkrun OAuth + version-control providers (GitHub PRs, GitLab MRs) behind an injectable HTTP transport"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
