[package]
name = "darkrun-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage = "https://app.darkrun.ai"
description = "app.darkrun.ai — the darkrun web app: a Dioxus (wasm) client that connects to a live run through the relay and renders the review surface, the remote fallback when the desktop/mobile app isn't available"
publish = false

[lib]
name = "darkrun_app"
path = "src/lib.rs"

[[bin]]
name = "darkrun-app"
path = "src/main.rs"

[dependencies]
# Brand + review components, renderer-agnostic (compiles to wasm).
darkrun-ui = { workspace = true }
# The wire contract — the tunnel protocol (ServerFrame/ClientFrame) + the review
# session payload this client renders.
darkrun-api = { workspace = true }

# Dioxus web renderer + router + launch (no desktop default — wasm-clean).
dioxus = { version = "0.7", default-features = false, features = ["lib", "web", "router", "launch", "devtools"] }

# The browser WebSocket (web-sys under the hood) for the relay client connection.
gloo-net = { version = "0.7", default-features = false, features = ["websocket", "json"] }
# Reconnect backoff timer in wasm.
gloo-timers = { version = "0.3", default-features = false, features = ["futures"] }
futures = { version = "0.3", default-features = false, features = ["std"] }

serde = { workspace = true }
serde_json = { workspace = true }

# Read the relay endpoint + session + token from the page URL query string.
web-sys = { version = "0.3", features = ["Window", "Location"] }
