[package]
name = "darkrun-web"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "darkrun website host (axum): server-backed OAuth broker for GitHub/GitLab plus the static wasm site with SPA fallback"

[[bin]]
name = "darkrun-web"
path = "src/bin/darkrun-web.rs"

[dependencies]
darkrun-telemetry.workspace = true
darkrun-vcs.workspace = true
# Shared tunnel protocol (relay routing envelope + app frames), one source of
# truth across the relay, the host connector, and every client.
darkrun-api.workspace = true
serde.workspace = true
serde_json.workspace = true
# Hash FCM tokens and relay nonces into stable Firestore document ids (the
# persistent device registry + the horizontally-scalable relay-token broker).
sha2.workspace = true
# Encode/parse Firestore `timestampValue` (RFC3339) for the relay-token broker's
# wall-clock expiry, and compute expiry on the write path.
chrono.workspace = true
# Base64-encode frame payloads as Pub/Sub message `data` for the cross-instance
# frame bus (the relay's Step 1c cross-instance frame routing).
base64 = "0.22"
tokio.workspace = true
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.7", features = ["fs", "cors"] }
# Split the relay's WebSocket into sink/stream halves for the bridge loop.
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json"] }
# Verify Firebase ID tokens (RS256 JWT) on the relay — the remote-session authz.
# v10 makes the crypto backend a required choice; pick the pure-Rust one to match
# our no-C stance (aws_lc_rs would pull in a C library).
jsonwebtoken = { version = "10", default-features = false, features = ["use_pem", "rust_crypto"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
# Real-socket WebSocket client for the relay end-to-end bridge test.
tokio-tungstenite = "0.30"
